2013-06-24  Terraneo Federico  <fede.tft@hotmail.it>

	* libc/reent/reent.c (_reclaim_reent): Free also _misc and
	_signal_buf.

2013-06-24  Terraneo Federico  <fede.tft@hotmail.it>

	* libc/include/sys/reent.h (_ATEXIT_INIT_PTR): Remove.
	(_REENT_INIT_ATEXIT_PTR): Remove.
	(_REENT_INIT_PTR): Reduce code size if _REENT_SMALL.

2013-06-21  Will Newton  <will.newton@linaro.org>

	* libc/machine/arm/strlen-armv7.S: Import latest strlen
	code from Linaro cortex-strings.

2013-06-21  Will Newton  <will.newton@linaro.org>

	* MAINTAINERS: Add Will Newton to Write After Approval.

2013-06-19  Bin Cheng  <bin.cheng@arm.com>

	* acconfig.h (_UNBUF_STREAM_OPT): Undefine.
	* newlib.hin (_UNBUF_STREAM_OPT): Undefine.
	* configure.in (--enable-newlib-unbuf-stream-opt): New option.
	* configure: Regenerate.
	* libc/stdio/vfprintf.c (_VFPRINTF_R): Don't do optimization on
	unbuffered stream files.
	* libc/stdio/vfwprintf.c (_VFWPRINTF_R): Likewise.
	* README: Add description about the option.

2013-06-19  Terraneo Federico  <fede.tft@hotmail.it>

	* libc/posix/readdir_r.c: Fix potential read past dirp->dd_buf.

2013-06-13  Bir Cheng  <bin.cheng@arm.com>

	* README: Add description for NEWLIB's feature customizing
	configuration options.

2013-06-10  Terraneo Federico  <fede.tft@hotmail.it>

	* libc/stdlib/gdtoa-gethex.c (__hexdig): Constify.
	(hexdig_init): Remove.
	(__hexdig_fun): New function.
	hexdig_init, added __hexdig_fun
	(gethex): Call __get_hexdig macro rather than hexdig.
	* libc/stdlib/gdtoa-hexnan.c (hexnan): Constify fpi argument.
	Call __get_hexdig macro rather than hexdig.
	* libc/stdlib/ldtoa.c: Throughout constify functions arguments where
	required by constifying the following arrays.
	(ezero): Constify.
	(eone): Constify.
	(ermsg): Constify.
	(etens): Constify.
	(emtens): Constify.
	(nan113): Constify.
	(nan64): Constify.
	(nan53): Constify.
	(nan24): Constify.
	* libc/stdlib/mprec.h (__get_hexdig): Define.